# ramaz-ml-course-2026-student

./: .gitignore  README.md  setup.sh
.devcontainer/: devcontainer.json
.github/workflows/: verify-solutions.yml
00_python_bootcamp/hw/: README.md  analysis.py  conftest.py  pyproject.toml  python_basics.py  score.py  test_analysis.py  test_python_basics.py  writeup.md
00_python_bootcamp/hw/data/: songs.csv
01_linear_algebra/hw/: README.md  conftest.py  linear_algebra.py  pyproject.toml  score.py  test_linear_algebra.py
01_linear_algebra/summary/: summary.md
04_linear_logistic_regression/hw/: README.md  analysis.py  conftest.py  pipeline.py  pyproject.toml  regression.py  score.py  spec.tex  test_regression.py  writeup.md
05_neural_networks/hw/: README.md  analysis.py  conftest.py  network.py  pyproject.toml  score.py  spec.tex  test_network.py  training.py  writeup.md
