[project]
name = "hw00-python-bootcamp"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["pandas>=2.0"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-json-report>=1.5",
    "ruff>=0.4",
    "ty>=0.0.1a0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
markers = [
    "lists: list manipulation functions",
    "dicts: dictionary functions",
    "sets: set operations",
    "hof: higher-order functions",
    "classes: object-oriented programming",
    "analysis: pandas data analysis",
]
addopts = "-v --tb=short --strict-markers"
