[project]
name = "hw04-neural-networks"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "matplotlib>=3.7",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.3",
    "ruff>=0.4",
    "ty>=0.0.1a0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
markers = [
    "unit: individual method tests (35 pts)",
    "integration: end-to-end pipelines (30 pts)",
    "analysis: analysis.py helpers (35 pts)",
]
addopts = "-v --tb=short --strict-markers"
timeout = 60
